[package]
name = "rename-item"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/levitatinglion/rename-item/"
license = "MIT OR Apache-2.0"

description = "Procedural macro to rename items on declaration, according to different case styles"
authors = ["LevitatingLion <levitatinglion@web.de>"]
keywords = ["macro", "proc-macro", "case", "camel", "snake"]
categories = ["rust-patterns"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.39", default-features = false }
syn = { version = "1.0.95", default-features = false, features = ["parsing", "proc-macro", "full"] }
quote = { version = "1.0.18", default-features = false }
darling = { version = "0.14.1", default-features = false }
heck = "0.4.0"
